style: 替换为 'getFirst()' 调用